--- a/package.json
+++ b/package.json
@@ -2,28 +2,15 @@
     "name": "weekend7-aldana-arcidiacono",
     "version": "0.1.0",
     "private": true,
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "test:all": "react-scripts test --watchAll --collect-coverage",
-        "test:prod": "react-scripts test --watchAll --collect-coverage --watchAll=false",
-        "eject": "react-scripts eject",
-        "lint": "eslint ."
-    },
     "dependencies": {
-        "@auth0/auth0-react": "^1.12.0",
         "@reduxjs/toolkit": "^1.9.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
+        "@testing-library/user-event": "^14.4.3",
         "@types/jest": "^27.5.2",
-        "@types/node": "^16.18.0",
-        "@types/react": "^18.0.23",
-        "@types/react-dom": "^18.0.7",
-        "@typescript-eslint/eslint-plugin": "^5.41.0",
-        "@typescript-eslint/parser": "^5.41.0",
-        "eslint-config-prettier": "^8.5.0",
+        "@types/node": "^17.0.45",
+        "@types/react": "^18.0.25",
+        "@types/react-dom": "^18.0.8",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.5",
@@ -32,34 +19,23 @@
         "typescript": "^4.8.4",
         "web-vitals": "^2.1.4"
     },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "test:all": "react-scripts test --watchAll --collect-coverage",
+        "test:prod": "react-scripts test --watchAll --collect-coverage --watchAll=false",
+        "start:build": "run-p build start"
+    },
     "eslintConfig": {
         "extends": [
             "react-app",
             "react-app/jest",
-            "plugin:@typescript-eslint/recommended",
             "prettier"
-        ],
-        "parser": "@typescript-eslint/parser",
-        "parserOptions": {
-            "ecmaVersion": "latest",
-            "sourceType": "module"
-        },
-        "plugins": [
-            "@typescript-eslint"
         ],
         "rules": {
             "testing-library/no-render-in-setup": "off"
         }
-    },
-    "prettier": {
-        "singleQuote": true
-    },
-    "jest": {
-        "coveragePathIgnorePatterns": [
-            "<rootDir>/src/reportWebVitals.ts",
-            "<rootDir>/src/index.ts",
-            "<rootDir>/src/tools/debug.ts"
-        ]
     },
     "browserslist": {
         "production": [
@@ -72,5 +48,25 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "jest": {
+        "coveragePathIgnorePatterns": [
+            "<rootDir>/src/reportWebVitals.ts",
+            "<rootDir>/src/index.ts",
+            "<rootDir>/src/tools/debug.ts"
+        ]
+    },
+    "devDependencies": {
+        "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+        "eslint-config-prettier": "^8.5.0"
+    },
+    "babel": {
+        "env": {
+            "test": {
+                "plugins": [
+                    "@babel/plugin-transform-modules-commonjs"
+                ]
+            }
+        }
     }
 }
