--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -30,7 +30,7 @@ name: SonarCloud Analysis
 
 on:
   push:
-    branches: ['main']
+    branches: ["main"]
   pull_request:
     types: [opened, synchronize, reopened]
   workflow_dispatch:
@@ -60,7 +60,7 @@ jobs:
           args:
             # Unique keys of your project and organization. You can find them in SonarCloud > Information (bottom-left menu)
             # mandatory
-            -Dsonar.projectKey=AldanaArcidiacono_202210-weekend7-aldana-arcidiacono
+            -Dsonar.projectKey=AldanaArcidiacono_202210-weekend7-aldana-arcidiacono-front
             -Dsonar.organization=aldanaarcidiacono
 
             # Comma-separated paths to directories containing main source files.
